--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "quack-spoon-1626",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.13",
     "@chakra-ui/modal": "^2.2.5",
@@ -17,9 +17,11 @@
     "firebase": "^9.15.0",
     "framer-motion": "^7.9.0",
     "json-server": "^0.17.1",
+    "mdb-react-ui-kit": "^6.3.0",
     "netlify-cli": "^12.4.0",
     "razorpay": "^2.8.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modern-drawer": "^1.1.2",
